--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "timi-boy",
+  "author": "timgluk",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.27.10",
@@ -14,12 +14,13 @@
     "eslint": "^8.23.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "gh-pages": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify-es": "^3.0.0",
-    "jquery": "^3.6.0",
+    // "jquery": "^3.6.0",
     "sass": "^1.54.5"
   },
   "dependencies": {
