fix: del swiper in package.json

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "gulp-concat": "^2.6.1",
-    "normalize.css": "^8.0.1",
-    "swiper": "^9.4.1"
+    "normalize.css": "^8.0.1"
   }
 }
